# Django-Shop-Project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  permissions.py  pyproject.toml
apps/core/: celery.py  context_processors.py  models.py
apps/order/: admin.py  models.py  serializers.py  test.py
apps/order/urls/: __init__.py  cart.py
apps/order/views/: api.py
apps/shop/: admin.py  models.py  test.py
apps/shop/urls/: __init__.py  product.py
apps/shop/views/: template.py
apps/user/: backend.py  models.py  tasks.py  test.py
apps/user/urls/: __init__.py  auth.py
apps/user/views/: api.py  authenticate.py  template.py
config/: settings.py  urls.py
public/urls/: __init__.py
public/views/: template.py
static/admin/css/: base.css
static/css/: style.min.css
static/css/plugins/: jquery.lineProgressbar.css  nice-select.css
static/js/: cart.js
templates/: base.html  footer.html  header.html  home.html
templates/admin/: base.html  base_site.html
templates/auth/: changepassword_successful.html  changepasswordpage.html  confirm_code.html  confirmotp_signup.html  email-otp.html  email-password-change.html  forgot_password.html  profile.html  register.html  send_email.html  sendotp.html  sign_in.html  sign_up.html  updateaddress.html  verify.html  verify_successful.html
templates/cart/: cart-empty.html  cart.html  cart_list.html  checkout.html  order-end.html  shop_end.html
templates/product/: category-detail.html  product_detail.html  subcategory_detail.html
templates/public/: about.html  contactus.html  home.html
utils/: mail.py
(+2 files in other folders)
